chore: Update keywords for dracula theme

--- a/squid-theme-dracula/package.json
+++ b/squid-theme-dracula/package.json
@@ -7,7 +7,7 @@
   },
   "keywords": [
     "squid-package",
-    "theme"
+    "squid-theme"
   ],
   "devDependencies": {
     "squid-packages": "^0.1.0",
